Opened 15 years ago
Closed 15 years ago
#4456 closed bug (fixed)
BDirectWindow::SetFullscreen() does not work as expected with hidden window.
Reported by: | bga | Owned by: | jackburton |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Game Kit | Version: | R1/pre-alpha1 |
Keywords: | Cc: | grzegorz.dabrowski@… | |
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
If you construct a BDirectWindow and calls SetFullscreen() on it before calling Show() by the first time and then call Show() the window will not be resized to fit the entire screen. I would expect that the SetFullscreen() call would resize the window and set its position even if the window is not showing yet and that when Show() is called it would be taking the entire screen as expected.
Change History (8)
comment:1 by , 15 years ago
Description: | modified (diff) |
---|
comment:2 by , 15 years ago
Status: | new → assigned |
---|
comment:3 by , 15 years ago
No worries. this can be worked around (and I did it in SDL). Of course eventually fixing it is a good thing. :)
comment:4 by , 15 years ago
Cc: | added |
---|
comment:5 by , 15 years ago
This happens because when ServerWindow::_ResizeToFullScreen() is called, Window::Screen() returns NULL. At the moment I wouldn't know where to fix this in a nice way, other than calling ServerWindow::_ResizeToFullScreen() again in Desktop::_ShowWindow().
comment:6 by , 15 years ago
Owner: | changed from | to
---|---|
Status: | in-progress → assigned |
comment:7 by , 15 years ago
Owner: | changed from | to
---|---|
Status: | assigned → in-progress |
I'll have a look. Don't think I can do this in time with the alpha1 release, though.