If SetFullScreen() was called on a hidden BDirectWindow, it wouldn't be set to fullscreen (since that code checks for a Screen object, and is null in that case). So we also call ResizeToFullScreen() in ServerWindow::_Show(), if needed. Fix ticket #4456.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35959 a95241bf-73f2-0310-859d-f6bbb57e9c96